fix(core/modal): update header alignment (#217)

--- a/packages/core/scss/components/_modal.scss
+++ b/packages/core/scss/components/_modal.scss
@@ -19,7 +19,7 @@
   padding: 0;
   padding-bottom: $tiny-space;
   border: none;
-  align-items: flex-start;
+  align-items: center;
 
   [data-close-button] {
     margin-left: 1rem;
